Bug 907489 - PresShell::HandleEvent() never initializes its "flags" variable (r=mattwoodrow)